Bcrypt Adapter finished and implemented

--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,7 @@ DB_NAME=testing
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
+
+ADMIN_USERNAME=Admin
+ADMIN_PASSWORD=anypass12@
+ADMIN_EMAIL=admin@admin.com
