We implemented jwt for Authentication with its atrategie module

--- a/.env.template
+++ b/.env.template
@@ -6,4 +6,6 @@ DB_USERNAME=postgres
 
 ADMIN_USERNAME=Admin
 ADMIN_PASSWORD=anypass12@
-ADMIN_EMAIL=admin@admin.com
+ADMIN_EMAIL=any@any.com
+
+JWT_SECRET=anykey
