Saving changes before create analysis

--- a/.env.template
+++ b/.env.template
@@ -8,4 +8,8 @@ ADMIN_USERNAME=Admin
 ADMIN_PASSWORD=anypass12@
 ADMIN_EMAIL=any@any.com
 
+CLOUD_NAME=prueba
+CLOUD_API_KEY=123123123
+CLOUD_API_SECRET=1231123ASDASD
+
 JWT_SECRET=anykey
