.env.template updated

--- a/.env.template
+++ b/.env.template
@@ -1,15 +1,19 @@
+#Database
 DB_PASSWORD=anypassword
 DB_NAME=testing
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 
+#Default user admin
 ADMIN_USERNAME=Admin
 ADMIN_PASSWORD=anypass12@
 ADMIN_EMAIL=any@any.com
 
+#Cloudinary
 CLOUD_NAME=prueba
 CLOUD_API_KEY=123123123
 CLOUD_API_SECRET=1231123ASDASD
 
+#JWT
 JWT_SECRET=anykey
